# nvml-sensor

./: .gitignore  AUTHORS  Cargo.toml  README.md  main.rs  nvml.rs
nvml_sensor/: Cargo.toml
nvml_sensor/src/: main.rs  nvml.rs
src/: main.rs  nvml.rs
