[package]
name = "nvml_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { version = "0.28.3"}
nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"]}
time = { version = "0.3", features = ["local-offset", "formatting"] }
rapl_probes = { path = "../rapl-ebpf-experiments/rapl_probes" }
anyhow = "1.0.71"
